sample/codepkg/objects/Food_Choice__c.object
<CustomObject>
    <fields>
        <fullName>Cuisine__c</fullName>
        <label>Cuisine</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mexican</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Barbecue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drink__c</fullName>
        <label>Drink</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alcoholic</fullName>
                </value>
                <value>
                    <fullName>Non-Alcoholic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Food_Category__c</fullName>
        <label>Food Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Veg</fullName>
                </value>
                <value>
                    <fullName>Non-Veg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Food Choice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>Drink__c</columns>
        <columns>Cuisine__c</columns>
        <columns>Food_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>